# matopt

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: cluster_expansion.py
src/matopt/: __init__.py
src/matopt/aml/: desc.py  expr.py  model.py  rule.py  util.py
src/matopt/materials/: atom.py  canvas.py  design.py  geometry.py  motifs.py  tiling.py  transform_func.py  util.py
src/matopt/materials/lattices/: bcc_lattice.py  cubic_lattice.py  diamond_lattice.py  fcc_lattice.py  hcp_lattice.py  lattice.py  perovskite_lattice.py  unit_cell_lattice.py  wurtzite_lattice.py
src/matopt/materials/parsers/: CFG.py  PDB.py  POSCAR.py  XYZ.py  pymatgen.py
tests/: test_expression_bounds.py  test_objects_construction.py  test_objects_functionality.py  test_parsers.py
